# grsc-ui

./: CMakeLists.txt  UI.pro  applications.cpp  applications.h  constant.h  cveinfo.cpp  cveinfo.h  dashboard.cpp  dashboard.h  main.cpp  main.qml  qml.qrc  todoinfo.cpp  todoinfo.h
QML/: ApplicationDetails.qml  Applications.qml  Dashboard.qml  HeaderBar.qml  LineAndScatterChart.qml  MissingPatches.qml  PieChart.qml  Settings.qml
data/: variables.js
